force-app/main/default/objects/Parent__c/fields/Probability__c.field-meta.xml
<CustomField>
    <fullName>Probability__c</fullName>
    <label>Probability</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>