force-app/main/default/objects/Parent__c/fields/Random_Number__c.field-meta.xml
<CustomField>
    <fullName>Random_Number__c</fullName>
    <label>Random Number</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>