force-app/main/default/objects/Parent__c/fields/Text_Message__c.field-meta.xml
<CustomField>
    <fullName>Text_Message__c</fullName>
    <label>Text Message</label>
    <length>32</length>
    <type>Text</type>
</CustomField>