force-app/main/default/objects/Parent__c/fields/Weighed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Weighed_Amount__c</fullName>
    <label>Weighed Amount</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>